# hero-grinder

./: CMakeLists.txt  LICENSE  README.md  hgmessage.cpp  hgrinder.cbp  hgrinder.cpp  hgrinder.depend  hgrinder.layout  hgsdl2.cpp  hgsdl2.h  hgtexture.h
include/: hgbackground.h  hgdata.h  hgdate.h  hgmenu.h  hgmenudata.h  hgmessage.h  hgmsgdata.h  hgobject.h  hgscript.h  hgsdl2.h  hgsprdata.h  hgsprite.h  hgstats.h  hgtexture.h
src/: hgbackground.cpp  hgdata.cpp  hgdate.cpp  hgmenu.cpp  hgmenudata.cpp  hgmessage.cpp  hgmsgdata.cpp  hgobject.cpp  hgscript.cpp  hgsdl2.cpp  hgsprdata.cpp  hgsprite.cpp  hgstats.cpp  hgtexture.cpp
